tests/e2e/semantics/return_null.story
function a returns int
	return
